CLI To-Do List in memory

--- a/01-ToDoCLI/package.json
+++ b/01-ToDoCLI/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Benites Eder",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "console-clear": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
