--- a/06-App/package.json
+++ b/06-App/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch app.js"
+    "dev": "node --watch --experimental-modules src/app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Eder Benites",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
