--- a/11-E-commerce/package.json
+++ b/11-E-commerce/package.json
@@ -16,12 +16,12 @@
   "dependencies": {
     "express": "^4.18.2",
     "pug": "^3.0.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "typescript": "^5.3.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
-    "ts-node": "^10.9.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
