--- a/13-GymMaster/backend/package.json
+++ b/13-GymMaster/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.ts",
+    "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "author": "",
