--- a/11-E-commerce/package.json
+++ b/11-E-commerce/package.json
@@ -3,25 +3,35 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "node --loader ts-node/esm src/index.ts",
+    "start": "npm run build && node ./dist/index.js",
     "build": "tsc",
-    "serve": "node dist/index.js"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
   "author": "Eder Benites",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "pug": "^3.0.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.3",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.3",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.16",
-    "ts-node-dev": "^2.0.0"
+    "@types/node": "^20.11.30",
+    "ts-node-dev": "^2.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.15"
   }
 }
