--- a/11-E-commerce/package.json
+++ b/11-E-commerce/package.json
@@ -12,26 +12,28 @@
   "author": "Eder Benites",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "pug": "^3.0.2",
-    "ts-node": "^10.9.2",
+    "@faker-js/faker": "^8.4.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "pg": "^8.12.0",
+    "pug": "^3.0.2",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "typescript": "^5.4.3",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30",
-    "ts-node-dev": "^2.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
-    "@types/nodemailer": "^6.4.15"
+    "@types/node": "^20.11.30",
+    "@types/nodemailer": "^6.4.15",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.3"
   }
 }
